SERVER-11281 Remove duplicate setting of default "admin" db